@@ -168,6 +168,7 @@ monitorClipboardAction.Action.shortDescription=System clipboard monitoring for n
 monitorClipboardAction.Action.accelerator=F8
 monitorClipboardAction.Action.smallIcon=${iconsPath}clipboard_small.gif
 
+monitorClipboardActionTray=Clipboard monitoring
 
 showSpeedMonitor.Action.text=Show &Speed Monitor...
 showSpeedMonitor.Action.shortDescription=Shows average and maximum download speed
